# guanaco

./: Cargo.toml  Gemfile  README.md  Rakefile  guanaco.gemspec
.github/workflows/: main.yml
examples/: auto_model.rb  camel.rb  get_accelerator.rb
ext/guanaco/: Cargo.toml  extconf.rb
ext/guanaco/src/: auto_model.rs  camel.rs  lib.rs
lib/: guanaco.rb
lib/guanaco/: version.rb
sig/: guanaco.rbs
spec/: guanaco_spec.rb  spec_helper.rb
