[package]
name = "guanaco"
version = "0.1.0"
edition = "2021"
authors = ["Chris Parker <mrcsparker@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.2" }
llm = { git = "https://github.com/rustformers/llm", branch = "main", features = [
    "models",
    "metal",
] }
llm-base = { git = "https://github.com/rustformers/llm.git", branch = "main" }
rand = "0.8.5"
num_cpus = "1.16.0"
